# postgres-codegen

./: .gitignore  Cargo.toml
src/: codegen.rs  file_writer.rs  lib.rs  main.rs  postgres.rs  schema.rs
src/file_writer/: file_system.rs
src/schema/: postgres.rs
