[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.74" }
tokio-postgres = { version = "0.7.10" }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
convert_case = "0.6.0"